--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="wri-emissions-visual-all-ghg/css/style.css">
 
   
 </head>
