--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <meta name="author" content="Jim Vallandingham">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/bubble_chart.css">
+  <link rel="stylesheet" href="wri-emissions-visual-all-ghg/css/reset.css">
+  <link rel="stylesheet" href="wri-emissions-visual-all-ghg/css/bubble_chart.css">
 </head>
 <body>
   <div class="container">
@@ -96,12 +96,12 @@
   <script src='https://d3js.org/d3.v4.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 
-    <script src="js/index.js"></script>
+    <script src="wri-emissions-visual-all-ghg/js/index.js"></script>
 
 </body>
 </html>
   
-    <script  src="js/index.js"></script>
+    <script  src="wri-emissions-visual-all-ghg/js/index.js"></script>
 
 </body>
 </html>
