--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <script src='https://d3js.org/d3.v4.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 
-    <script src="wri-emissions-visual-all-ghg/js/index.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
